<resources>
    <string name="app_name">Project 1</string>
    <string name="TaskType">Task Type</string>
    <string name="Task">Task</string>
    <string name="cd" />
    <string name="comDate">When do want the task to be completed ?</string>
    <string name="notDate">When do you want to receive notification for the task?</string>
    <string name="notTime">The time of notification.</string>
    <string name="Done">Done</string>
    <string name="Undo">Undo</string>
</resources>