<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".InsertTask">

    <EditText
        android:id="@+id/etNotifyDate"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="332dp"
        android:ems="10"

        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="14dp"
        android:text="@string/notDate"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etNotifyDate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="12dp"
        android:text="@string/notTime"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etNotifyTime"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/teal_200"
        android:clickable="true"
        android:onClick="goBack"
        android:tint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

    <Spinner
        android:id="@+id/spnTaskType"
        android:layout_width="149dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="116dp"
        android:backgroundTint="#00BCD4"
        android:entries="@array/TaskTypes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="12dp"
        android:text="@string/TaskType"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/spnTaskType"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginBottom="12dp"
        android:text="@string/Task"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etTask"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etTask"
        android:layout_width="204dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/spnTaskType"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/comDate"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etCompletionDate"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etCompletionDate"
        android:layout_width="186dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="220dp"

        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNotifyTime"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="332dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/teal_200"
        android:clickable="true"
        android:tint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/teal_200"
        app:srcCompat="@drawable/ic_baseline_save_24" />


</androidx.constraintlayout.widget.ConstraintLayout>